@@ -395,10 +395,23 @@ $(document).ready(function() {
     // some of our fields to values passed 
     $.each(parse_params(), function(k, v) {
         $(".asm-onlineform-date, .asm-onlineform-time, .asm-onlineform-text, .asm-onlineform-lookup, .asm-onlineform-notes, " +
-            ".asm-onlineform-check, .asm-onlineform-radio, .asm-onlineform-adoptableanimal, .asm-onlineform-shelteranimal, " +
-            ".asm-onlineform-breed, .asm-onlineform-colour, .asm-onlineform-species").each(function() {
+            ".asm-onlineform-check, .asm-onlineform-radio, .asm-onlineform-breed, .asm-onlineform-colour, " +
+            ".asm-onlineform-species").each(function() {
             if ($(this).attr("name").indexOf(k) == 0) {
                 $(this).val(v);
+            }
+        });
+        // Use a pattern match for animal dropdowns instead of an exact match
+        // so that the name or the sheltercode can be passed
+        $(".asm-onlineform-adoptableanimal, .asm-onlineform-shelteranimal").each(function() {
+            if ($(this).attr("name").indexOf(k) == 0) {
+                $(this).find("option").each(function() {
+                    if ($(this).prop("value").indexOf(v) >= 0) {
+                        $(this).prop("selected", true);
+                        return false;
+                    }
+                });
+                return false;
             }
         });
     });
